# MetaImGUI

./: .clang-format  .clang-tidy  .commit-msg-hook.sh  .cppcheck-suppressions  .editorconfig  .gitignore  .pre-commit-hook.sh  AUTHORS  BUG_CONTEXT_LOSS.md  BUG_FIXES_APPLIED.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CODE_REVIEW_BUGS.md  CONTEXT_RECOVERY_APPROACH.md  CONTRIBUTING.md  Doxyfile  GITHUB_ACTIONS_GUIDE.md  ISS_TRACKER_IMPLEMENTATION.md  META_FEATURES.md  QUICK_REFERENCE.md  QUICK_TEST.txt  README.md  README_CONTEXT_RECOVERY.md  SECURITY.md  SECURITY_CHECKLIST.md  SETUP_GUIDE.md  SUMMARY_CONTEXT_RECOVERY.md  TESTING_CONTEXT_RECOVERY.md  build.bat  build.sh  entitlements.plist  init_template.ps1  init_template.sh  setup_dependencies.bat  setup_dependencies.sh
.beads/: issues.jsonl
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  TEST_DEPENDENCY_REVIEW.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml  performance.yml  question.md
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  coverage.yml  dependency-review.yml  docs.yml  release.yml  sanitizers.yml  static-analysis.yml
benchmarks/: CMakeLists.txt  benchmark_config.cpp  benchmark_localization.cpp  benchmark_logger.cpp  benchmark_main.cpp
cmake/: CodeCoverage.cmake  GetGitVersion.cmake  Sanitizers.cmake  StaticAnalysis.cmake
docs/: README.md  file-dialogs.md  mainpage.md  plugin-architecture.md  security-practices.md
include/: Application.h  ConfigManager.h  DialogManager.h  ISSTracker.h  Localization.h  Logger.h  ThemeManager.h  UIRenderer.h  UpdateChecker.h  WindowManager.h  version.h.in
packaging/: PACKAGING_GUIDE.md  README.md  TESTING_GUIDE.md  WINDOWS_WORKFLOW_FIX.md  create_linux_packages.sh  create_macos_dmg.sh  create_windows_installer.ps1  test_packages.sh  windows_installer.nsi
packaging/AppDir/: .DirIcon  AppRun  MetaImGUI.desktop
packaging/AppDir/usr/lib/: libbrotlicommon.so.1  libbrotlidec.so.1  libcurl.so.4  libffi.so.8  libglfw.so.3  libgnutls.so.30  libgssapi_krb5.so.2  libhogweed.so.6  libidn2.so.0  libk5crypto.so.3  libkeyutils.so.1  libkrb5.so.3  libkrb5support.so.0  liblber.so.2  libldap.so.2  libnettle.so.8  libnghttp2.so.14  libp11-kit.so.0  librtmp.so.1  libsasl2.so.2  libssh2.so.1  libssl.so.3  libtasn1.so.6  libunistring.so.5  libzstd.so.1
packaging/AppDir/usr/share/metainfo/: MetaImGUI.appdata.xml
packaging/deb/DEBIAN/: control
packaging/deb/usr/share/MetaImGUI/icons/: README.md  generate_icons.sh
packaging/deb/usr/share/applications/: MetaImGUI.desktop
packaging/deb/usr/share/doc/MetaImGUI/: copyright
packaging/flatpak/: com.metaimgui.MetaImGUI.desktop  com.metaimgui.MetaImGUI.metainfo.xml  com.metaimgui.MetaImGUI.yaml
packaging/snap/: snapcraft.yaml
resources/: README.md
resources/translations/: README.md  translations.json
screenshots/: README.md
scripts/: README.md  monitor_actions.ps1  monitor_actions.sh  prepare_release.sh  quick_status.sh  run_clang_tidy.sh  run_coverage.sh  run_sanitizers.sh  run_static_analysis.sh
src/: Application.cpp  ConfigManager.cpp  DialogManager.cpp  ISSTracker.cpp  Localization.cpp  Logger.cpp  ThemeManager.cpp  UIRenderer.cpp  UpdateChecker.cpp  WindowManager.cpp  main.cpp
tests/: test_config_manager.cpp  test_logger.cpp  test_main.cpp  test_theme_manager.cpp  test_update_checker.cpp  test_version.cpp  test_window_manager.cpp
